--- a/package.json
+++ b/package.json
@@ -10,34 +10,36 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.2",
-    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@expo/metro-config": "^0.10.7",
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "axios": "^0.27.2",
-    "expo": "~45.0.0",
-    "expo-app-loading": "~2.0.0",
-    "expo-font": "~10.1.0",
-    "expo-location": "~14.2.2",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.4",
+    "expo": "^49.0.0",
+    "expo-app-loading": "~2.1.0",
+    "expo-constants": "~14.4.2",
+    "expo-font": "~11.4.0",
+    "expo-location": "~16.1.0",
+    "expo-splash-screen": "^0.20.5",
+    "expo-status-bar": "~1.6.0",
+    "expo-updates": "^0.18.12",
     "native-base": "^3.4.6",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.72.4",
     "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-svg": "12.3.0",
-    "react-native-web": "0.17.7",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "^13.9.0",
+    "react-native-web": "^0.19.8",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
+    "@types/react": "~18.2.14",
     "@types/react-native": "~0.67.6",
     "@types/styled-components-react-native": "^5.1.3",
-    "typescript": "~4.3.5"
+    "typescript": "^5.2.2"
   },
   "private": true
 }
